--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,15 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "^8.3",
         "artisaninweb/laravel-soap": "0.3.0.10",
         "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "spiral/roadrunner": "^2023.3",
-        "spiral/roadrunner-grpc": "^3.2"
+        "spiral/roadrunner-grpc": "^3.2",
+        "grpc/grpc": "1.57.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
