--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/",
-            "App\\Generated\\": "app/Generated/"
+            "App\\Generated\\": "app/Generated"
         }
     },
     "autoload-dev": {
