--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,13 @@
     "require": {
         "php": "^8.3",
         "artisaninweb/laravel-soap": "0.3.0.10",
+        "grpc/grpc": "^1.57",
         "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "spiral/roadrunner": "^2023.3",
-        "spiral/roadrunner-grpc": "^3.2",
-        "grpc/grpc": "dev-master"
-
+        "spiral/roadrunner-grpc": "^3.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -30,7 +29,7 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/",
-            "App\\Generated\\": "app/Generated"
+            "Maintenance\\": "app/Generated/Maintenance/"
         }
     },
     "autoload-dev": {
