--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,11 @@
         "php": "^8.2.4",
         "artisaninweb/laravel-soap": "0.3.0.10",
         "grpc/grpc": "^1.57",
+        "google/protobuf": "^3.25",
         "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8",
-        "spiral/roadrunner": "^2023.3",
-        "spiral/roadrunner-grpc": "^3.2"
+        "laravel/tinker": "^2.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
