--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,13 @@
     "require": {
         "php": "^8.2.4",
         "artisaninweb/laravel-soap": "0.3.0.10",
-        "grpc/grpc": "^1.57",
         "google/protobuf": "^3.25",
+        "grpc/grpc": "^1.57",
         "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "textalk/websocket": "^1.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
